--- a/plugin.xml
+++ b/plugin.xml
@@ -25,6 +25,9 @@
 		</config-file>
  
         <source-file src="src/android/com/uforia/twitterAuth/TwitterAuthPlugin.java" target-dir="src/com/uforia/twitterAuth" />      
+		<source-file src="src/android/libs/twitter4j-async-4.0.4.jar" target-dir="libs" />
+		<source-file src="src/android/libs/twitter4j-core-4.0.4.jar" target-dir="libs" />
+		<source-file src="src/android/libs/twitter4j-stream-4.0.4.jar" target-dir="libs" />
      
 	 </platform>          
 </plugin>
