--- a/plugin.xml
+++ b/plugin.xml
@@ -22,16 +22,24 @@
         </config-file>
 		
 		<config-file target="AndroidManifest.xml" parent="/*">
-			<intent-filter>
-                <data android:scheme="com.uforia.auth" />
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
-			<intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="com.uforia" android:pathPattern="/twitter-access-tokens" />
-            </intent-filter>
+			<activity
+				android:name="Uforia"
+				android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+				android:label="@string/app_name"
+				android:launchMode="singleTask"
+				android:screenOrientation="portrait"
+				android:theme="@android:style/Theme.NoTitleBar">
+				<intent-filter>
+					<data android:scheme="com.uforia.auth" />
+					<action android:name="android.intent.action.VIEW" />
+				</intent-filter>
+				<intent-filter>
+					<action android:name="android.intent.action.VIEW" />
+					<category android:name="android.intent.category.DEFAULT" />
+					<category android:name="android.intent.category.BROWSABLE" />
+					<data android:scheme="http" android:host="com.uforia" android:pathPattern="/twitter-access-tokens" />
+				</intent-filter>
+			</activity>
 		</config-file>
  
         <source-file src="src/android/com/uforia/twitterAuth/TwitterAuthPlugin.java" target-dir="src/com/uforia/twitterAuth" />      		
