--- a/plugin.xml
+++ b/plugin.xml
@@ -21,14 +21,8 @@
             </feature>
         </config-file>
 		
-		<config-file target="AndroidManifest.xml" parent="/*">
-			<activity
-				android:name="Uforia"
-				android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
-				android:label="@string/app_name"
-				android:launchMode="singleTask"
-				android:screenOrientation="portrait"
-				android:theme="@android:style/Theme.NoTitleBar">
+		<config-file target="AndroidManifest.xml" parent="/manifest/application/activity[@android:name='Uforia']">
+			
 				<intent-filter>
 					<data android:scheme="com.uforia.auth" />
 					<action android:name="android.intent.action.VIEW" />
@@ -39,7 +33,7 @@
 					<category android:name="android.intent.category.BROWSABLE" />
 					<data android:scheme="http" android:host="com.uforia" android:pathPattern="/twitter-access-tokens" />
 				</intent-filter>
-			</activity>
+			
 		</config-file>
  
         <source-file src="src/android/com/uforia/twitterAuth/TwitterAuthPlugin.java" target-dir="src/com/uforia/twitterAuth" />      		
