--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,7 @@
             </feature>
         </config-file>
 		
-		<config-file target="AndroidManifest.xml" parent="/manifest/application/activity[@android:name='Uforia']">
+		<config-file target="AndroidManifest.xml" parent="/manifest/application/activity[1]">
 			
 				<intent-filter>
 					<data android:scheme="com.uforia.auth" />
